@@ -3,10 +3,14 @@ user: ubuntu
 disable_root: 1
 preserve_hostname: False
 
-cloud_config_modules:
+cloud_init_modules:
  - resizefs
- - mounts
+ - set_hostname
+ - update_hostname
  - rsyslog
+
+cloud_config_modules:
+ - mounts
  - ssh-import-id
  - locale
  - ssh
